[project]
name = "paper-sorter"
version = "0.2.0"
requires-python = ">=3.11"
description = "Offline science paper organizer using sentence-transformers"
dependencies = [
    "sentence-transformers>=2.7.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pdfplumber>=0.11.0",
    "pypdf>=4.0.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
